--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "@unform/core": "^2.1.6",
     "@unform/web": "^2.1.6",
     "axios": "^0.21.4",
+    "date-fns": "^2.24.0",
+    "date-fns-tz": "^1.1.6",
     "polished": "^4.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
-    "react-spring": "^9.2.4",
+    "react-spring": "^8.0.27",
     "styled-components": "^5.3.1",
     "typescript": "^4.4.3",
     "uuid": "^8.3.2",
@@ -50,5 +52,10 @@
     "@types/yup": "^0.29.13",
     "@typescript-eslint/eslint-plugin": "^4.31.2",
     "@typescript-eslint/parser": "^4.31.2"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app"
+    ]
   }
 }
